# thumbnail-service-rs

./: Cargo.toml  README.md
src/: archive.rs  fits.rs  main.rs
